fix: fix overflow in HomePage and add change onclick to button

--- a/src/components/HomePage/style.css
+++ b/src/components/HomePage/style.css
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   background-color: #ffff;
-  overflow: hidden;
   animation: reverse-flush 1s;
 }
 
